nivasa-macros/tests/trybuild/scxml_handler_unknown_arg.stderr
error: unknown `#[scxml_handler]` argument `mode`; expected `statechart` and `state`
 --> tests/trybuild/scxml_handler_unknown_arg.rs:3:64
  |
3 | #[scxml_handler(statechart = "request", state = "guard_chain", mode = "strict")]
  |                                                                ^^^^
