nivasa-macros/tests/trybuild/scxml_handler_unknown_arg.rs
use nivasa_macros::scxml_handler;

#[scxml_handler(statechart = "request", state = "guard_chain", mode = "strict")]
fn handler() {}

fn main() {}
